# clipsearch

./: Cargo.toml  Makefile  README.md
assets/: clipsearch.desktop.template
src/: gui.rs  main.rs
