[package]
name = "clipsearch"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0"
redb = "2.1"
uuid = { version = "1.10", features = ["v7"] }
iced = { version = "^0.12", features = ["image"] }
img = {version = "^0.25", package = "image"}
